# scout

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml
config/: preferences.yaml.example
data/: country_locations.json  tech_aliases.json
data/domain_aliases/: education.json  general.json  hospitality.json  medical.json
resume/: master.json.example
resume/templates/: resume.html
src/: crypto.py  database.py  dedup.py  domain.py  location_match.py  logging_config.py  paths.py  preferences.py  scheduler.py  settings.py
src/ai/: ai_client.py  anthropic_client.py  cover_letter.py  email_parser.py  resume_enhancer.py  resume_parser.py  scorer.py  tailor.py
src/ai/providers/: anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py
src/api/: applications.py  auth.py  data_management.py  jobs.py  main.py  preferences.py  resume.py  scheduler.py  settings.py
src/apply/: answers_store.py  apply_logger.py  base_bot.py  greenhouse.py  lever.py  linkedin_easy_apply.py  workday.py
src/integrations/: notion_sync.py  sheets_sync.py
src/resume/: ats_scorer.py  builder.py  gap_analysis.py  pdf_parser.py
src/scrapers/: androidjobs.py  arbeitnow.py  base.py  echojobs.py  greenhouse.py  health.py  himalayas.py  hn_hiring.py  jobicy.py  jobspy_scraper.py  landingjobs.py  prefilter.py  remoteok.py  remotive.py  themuse.py  weworkremotely.py  workingnomads.py
src/tracking/: gmail_reader.py
tests/: test_ats_scorer.py
tests/unit/: test_ai_client.py  test_prefilter.py  test_settings.py  test_tech_detection.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  main.tsx
ui/src/components/: InfoTooltip.tsx
ui/src/pages/: Analytics.tsx  Dashboard.tsx  JobDetail.tsx  Jobs.tsx  Preferences.tsx  ResumeStudio.tsx  Scheduler.tsx  Settings.tsx  SetupWizard.tsx  Sources.tsx
